
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int u_short ;
struct TYPE_2__ {char* arch; int ret; } ;


 int printf (char*,...) ;
 TYPE_1__* targets ;

void show_help(char *pr00gie,u_short opt) {
int i=0;
printf("==========> THE EYE ON SECURITY RESEARCH GROUP <==========\n");
printf("Monit <= 4.2 Remote Root Exploit\n");
printf("n2n[at]linuxmail[dot]org - abhisek[at]front[dot]ru\n");
printf("http://www.eos-india.net\n\n");
if(!opt)
return;
printf("[usage]\n");
printf("%s [Remote Host] [Remote Port] [Target]\n",pr00gie);
printf("[Available Targets]\n");
while(targets[i].arch != ((void*)0)) {
printf("%d. - %s\t - %p\n",(i),targets[i].arch,targets[i].ret);
i++;
}
}
